--- a/contact-us.html
+++ b/contact-us.html
@@ -31,14 +31,14 @@
         <input type="text" id="phone" required />
 
         <label for="email">Email</label>
-        <input type="email" id="email" required />
+        <input type="text" id="email" required />
 
         <label for="gender">Gender</label>
         <input type="radio" name="gender" value="Male" required /> Male
         <input type="radio" name="gender" value="Female" required /> Female
 
         <label for="comments">Comments</label>
-        <textarea id="comments" minlength="10" required></textarea>
+        <textarea id="comments" required></textarea>
 
         <button type="submit">Submit</button>
       </form>
@@ -46,6 +46,6 @@
       <div id="contactResult"></div>
     </div>
 
-    <script src="js/validation.js"></script>
+    <script src="js/contactUsValidation.js"></script>
   </body>
 </html>
