--- a/cars.html
+++ b/cars.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/mystyle.css" />
-    <title>Stays</title>
+    <title>Cars</title>
   </head>
   <body>
     <nav>
@@ -19,10 +19,19 @@
     </nav>
 
     <div class="container">
-      <h2>Find a Stay</h2>
-      <form id="staysForm">
-        <label for="city">City (Texas or California)</label>
+      <h2>Rent a Car</h2>
+      <form id="carForm">
+        <label for="city">City</label>
         <input type="text" id="city" required />
+
+        <label for="carType">Car Type</label>
+        <select id="carType" required>
+          <option value="">-- Select Car Type --</option>
+          <option value="Economy">Economy</option>
+          <option value="SUV">SUV</option>
+          <option value="Compact">Compact</option>
+          <option value="Midsize">Midsize</option>
+        </select>
 
         <label for="checkin">Check-in Date</label>
         <input type="date" id="checkin" required />
@@ -30,22 +39,13 @@
         <label for="checkout">Check-out Date</label>
         <input type="date" id="checkout" required />
 
-        <label for="adults">Number of Adults</label>
-        <input type="number" id="adults" min="1" required />
-
-        <label for="children">Number of Children</label>
-        <input type="number" id="children" min="0" required />
-
-        <label for="infants">Number of Infants</label>
-        <input type="number" id="infants" min="0" required />
-
-        <button type="submit">Search</button>
+        <button type="submit">Submit</button>
       </form>
 
-      <div id="staysResult"></div>
+      <div id="carResult"></div>
     </div>
 
     <script src="./js/commonValidation.js"></script>
-    <script src="./js/staysValidation.js"></script>
+    <script src="./js/carValidation.js"></script>
   </body>
 </html>
