--- a/flights.html
+++ b/flights.html
@@ -64,5 +64,6 @@
     </div>
 
     <script src="js/flightsValidation.js"></script>
+	<script src="js/commonValidation.js"></script>
   </body>
 </html>
