--- a/contact-us.html
+++ b/contact-us.html
@@ -7,6 +7,10 @@
     <title>Contact Us</title>
   </head>
   <body>
+    <div style="text-align: center;">
+      <h1>Welcome to Car Rentals</h1>
+      <p id="datetime"></p>
+    </div>
     <nav>
       <ul class="navbar">
         <li><a href="index.html">Home</a></li>
@@ -46,6 +50,7 @@
       <div id="contactResult"></div>
     </div>
 
+    <script src="./js/commonValidation.js"></script>
     <script src="js/contactUsValidation.js"></script>
   </body>
 </html>
