--- a/cruises.html
+++ b/cruises.html
@@ -8,6 +8,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
+    <div style="text-align: center;">
+      <h1>Welcome to Car Rentals</h1>
+      <p id="datetime"></p>
+    </div>
     <nav>
       <ul class="navbar">
         <li><a href="index.html">Home</a></li>
@@ -55,6 +59,7 @@
       <div id="result"></div>
     </div>
 
+    <script src="./js/commonValidation.js"></script>
     <script src="./js/cruiseValidation.js"></script>
   </body>
 </html>
