--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Travel Deals</title>
   </head>
   <body>
+    <div id="header">
+      <h1>Welcome to Car Rentals</h1>
+      <p id="datetime"></p>
+    </div>
     <nav>
       <ul class="navbar">
         <li><a href="index.html">Home</a></li>
@@ -29,6 +33,6 @@
       <p id="datetime"></p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="./js/commonValidation.js"></script>
   </body>
 </html>
