--- a/cars.html
+++ b/cars.html
@@ -7,6 +7,10 @@
     <title>Cars</title>
   </head>
   <body>
+    <div style="text-align: center;">
+      <h1>Welcome to Car Rentals</h1>
+      <p id="datetime"></p>
+    </div>
     <nav>
       <ul class="navbar">
         <li><a href="index.html">Home</a></li>
@@ -44,7 +48,6 @@
 
       <div id="carResult"></div>
     </div>
-
     <script src="./js/commonValidation.js"></script>
     <script src="./js/carValidation.js"></script>
   </body>
