--- a/flights.html
+++ b/flights.html
@@ -7,6 +7,10 @@
     <title>Flights</title>
   </head>
   <body>
+    <div style="text-align: center;">
+      <h1>Welcome to Car Rentals</h1>
+      <p id="datetime"></p>
+    </div>
     <nav>
       <ul class="navbar">
         <li><a href="index.html">Home</a></li>
