--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/mystyle.css" />
-    <title>Travel Deals</title>
-  </head>
-  <body>
-    <div id="header">
-      <h1>Welcome to Car Rentals</h1>
-      <p id="datetime"></p>
-    </div>
-    <nav>
-      <ul class="navbar">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/mystyle.css" />
+  <title>Travel Deals</title>
+</head>
+
+<body>
+  <div id="header">
+    <h1>Welcome to Car Rentals</h1>
+  </div>
+  <nav>
+    <ul class="navbar">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="stays.html">Stays</a></li>
+      <li><a href="flights.html">Flights</a></li>
+      <li><a href="cars.html">Cars</a></li>
+      <li><a href="cruises.html">Cruises</a></li>
+      <li><a href="contact-us.html">Contact Us</a></li>
+    </ul>
+  </nav>
+
+  <div class="main-body">
+    <aside>
+      <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="stays.html">Stays</a></li>
         <li><a href="flights.html">Flights</a></li>
@@ -20,19 +33,20 @@
         <li><a href="cruises.html">Cruises</a></li>
         <li><a href="contact-us.html">Contact Us</a></li>
       </ul>
-    </nav>
+    </aside>
 
     <div class="container">
-      <h1>Welcome to the Best Travel Deals</h1>
-      <p>
-        Find the best deals for your stays, flights, car rentals, and cruises.
-      </p>
+      <h1>Welcome to the website</h1>
+      <p>Here you can search for stays, flights, car rentals, and cruises.</p>
+      <p>Free free to contact us.</p>
     </div>
+  </div>
 
-    <footer>
-      <p id="datetime"></p>
-    </footer>
+  <footer>
+    <p class="datetime"></p>
+  </footer>
 
-    <script src="./js/commonValidation.js"></script>
-  </body>
+  <script src="./js/commonValidation.js"></script>
+</body>
+
 </html>
