--- a/contact-us.html
+++ b/contact-us.html
@@ -82,6 +82,7 @@
     
     <footer>
         <p class="datetime"></p>
+        <p>Group 6 | Ravneet Singh Baansal - RXB230004 | Purusharth Soni - PXS220168 | Abhisneh Singh - AXS220343</p>
     </footer>
     
     <script src="./js/commonValidation.js"></script>
