--- a/flights.html
+++ b/flights.html
@@ -100,6 +100,7 @@
         
         <footer>
             <p class="datetime"></p>
+            <p>Group 6 | Ravneet Singh Baansal - RXB230004 | Purusharth Soni - PXS220168 | Abhisneh Singh - AXS220343</p>
         </footer>
         
         <script src="js/flightsValidation.js"></script>
