added flight results and empty cart page

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -20,6 +20,7 @@
             <li><a href="cars.html">Cars</a></li>
             <li><a href="cruises.html">Cruises</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="cart.html">Cart</a></li>
         </ul>
     </nav>
     
@@ -51,6 +52,7 @@
                 <li><a href="cars.html">Cars</a></li>
                 <li><a href="cruises.html">Cruises</a></li>
                 <li><a href="contact-us.html">Contact Us</a></li>
+                <li><a href="cart.html">Cart</a></li>
             </ul>
         </aside>
         
