--- a/assignment3/cruises.html
+++ b/assignment3/cruises.html
@@ -19,6 +19,7 @@
             <li><a href="cars.html">Cars</a></li>
             <li><a href="cruises.html">Cruises</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="cart.html">Cart</a></li>
         </ul>
     </nav>
     <div class="main-body">
@@ -49,6 +50,7 @@
                 <li><a href="cars.html">Cars</a></li>
                 <li><a href="cruises.html">Cruises</a></li>
                 <li><a href="contact-us.html">Contact Us</a></li>
+                <li><a href="cart.html">Cart</a></li>
             </ul>
         </aside>
         
