added flight booking and validation logic

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -59,7 +59,7 @@
         <div class="container">
             <h1>Welcome to the website</h1>
             <p>Here you can search for stays, flights, car rentals, and cruises.</p>
-            <p>Free free to contact us.</p>
+            <p>Feel free to contact us.</p>
         </div>
     </div>
     
