--- a/assignment3/cart.html
+++ b/assignment3/cart.html
@@ -56,6 +56,7 @@
       <div class="container">
         <div class="bookingInfoContainer"></div>
         <div class="flightInfoContainer"></div>
+        <div class="stayInfoContainer"></div>
         <h3>Passenger Information</h3>
         <form id="cartForm">
           <div class="adultInfoContainer"></div>
