--- a/assignment4/my-account.html
+++ b/assignment4/my-account.html
@@ -63,6 +63,7 @@
         <div id="admin-div" class="container" style="display:none">
             <h2>Admin Panel</h2>
             <button id="load-flight-data" onclick="loadFlightData()">Load Flight Data</button>
+            <button id="load-stays-data" onclick="loadStaysData()">Load Stays Data</button>
             
             <h3>Booked Flights</h3>
             <form>
